---------------------------------------------------------------------------------------------------
Version: 0.7.2
Date: 2022-08-11
  Changes:
    - AAII: Oil processing depends on tungsten processing
---------------------------------------------------------------------------------------------------
Version: 0.7.1
Date: 2022-08-10
  Fixes:
    - Compatibility - fix tech deadlock with MoreScience
---------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: 2022-08-09
  Features:
    - New optional intermediate: Copper tungsten, replaces tungsten plate in some recipes.
      If not unlocked on settings change, use "TungstenRecipes" (no slashes) command.
    - Space Exploration: New option to use tungsten powder instead of molten tungsten.
    - A few basic recipe tweaks for 248k
  Changes:
    - Rocketry now defaults to not requiring military science packs. Option still exists for now.
    - General balance: Tungsten plates required for piercing ammunition reduced.
    - General balance: Tungsten ingredients required for oil refinery & chemical plant increased.
    - General balance: For some mod loadouts, steel no longer required for assembling machine 2
    - SE+K2 balance: When using Space Exploration 0.6 & Krastorio 2, speed modules are now removed
      from rocket science (rocket tech cards), but many more rocket engine nozzles are used.
      This slightly balances the jump in complexity from chemical to rocket science.
      Speed modules are still used later in optimization science.
---------------------------------------------------------------------------------------------------
Version: 0.6.6
Date: 2021-08-02
  Changes:
    - Asteroid Mining support
---------------------------------------------------------------------------------------------------
Version: 0.6.5
Date: 2021-07-10
  Changes:
    - Support Double Furnace mod
  Localization:
    - ru locale updates thanks to Pergamum663