@@ -39,6 +39,7 @@ bz-tungsten-processing=Basic tungsten processing
 enriched-tungsten=Enriched tungsten
 tungsten-matter-processing=Tungsten conversion
 advanced-carbon-furnace=__ITEM__advanced-carbon-furnace__
+pumpjack=__ENTITY__pumpjack__
 
 [technology-description]
 enriched-tungsten=Enrich tungsten ore, purifying with ammonia [fluid=ammonia] and water [fluid=water], improving the final yield. Produce dirty water [fluid=dirty-water] as a byproduct.
